--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
                                         <input type="password" name="password" class="form-control "
                                                 placeholder="Password" required>
                                 </div>
-                                <button class="btn btn-lg btn-outline-light btn-block" type="submit">Login</button>
+                                <button class="btn btn-outline-light btn-block" type="submit">Login</button>
                                 <p class="mt-5 mb-3 ">Need an Account? <a href="/signup">Sign Up Here</a></p>
                                 <p class="mt-5 mb-3 text-muted copyright2">&copy; Souradip Nath 2020</p>
                 </div>
