--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,8 +19,12 @@
                                 <p class="mt-2 mb-2 signup-status text-muted" id="message">
                                         <%- signupStatus %> </p>
                                 <div class="form-group">
-                                        <input type="text" name="name" class="form-control " placeholder="Name" required
-                                                autofocus>
+                                        <input type="text" name="fname" class="form-control " placeholder="First Name"
+                                                required autofocus>
+                                </div>
+                                <div class="form-group">
+                                        <input type="text" name="lname" class="form-control " placeholder="Last Name"
+                                                required autofocus>
                                 </div>
                                 <div class="form-group">
                                         <input type="email" name="username" class="form-control " placeholder="Email ID"
@@ -30,7 +34,7 @@
                                         <input type="password" name="password" class="form-control "
                                                 placeholder="Password" required>
                                 </div>
-                                <button class="btn btn-lg btn-outline-light btn-block" type="submit">Sign Up</button>
+                                <button class="btn btn-outline-light btn-block" type="submit">Sign Up</button>
                                 <p class="mt-5 mb-3">Already Have an Account? <a href="/">Login Here</a></p>
                                 <p class="mt-5 mb-3 text-muted copyright2">&copy; Souradip Nath 2020</p>
                 </div>
