--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,7 +19,7 @@
                 <div class="row">
                         <div class="col-12">
                                 <h1 class="mb-2 mt-5">Welcome, <%= user.fname %> </h1>
-                                <p class="mb-3 form"><%- postStatus %> </p>
+                                <p class="mb-3"><%- postStatus %> </p>
                                 <hr>
                         </div>
                 </div>
