Fixed placeholder text issue

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,7 +34,7 @@
                                         <div class="form-group">
                                                 <textarea name="content" class="form-control "
                                                         placeholder="How was your day?" required rows="6" autofocus
-                                                        autocomplete="off">How was your day?</textarea>
+                                                        autocomplete="off"></textarea>
                                         </div>
                                         <button class="btn btn-outline-light " type="submit">Submit</button>
                                 </form>
